# dactyl

./: .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.aws.yml  docker-compose.yml  env
.github/workflows/: github-actions-aws.yml
api/: .flake8  build.sh  build_files.sh  package.json  pyproject.toml  pytest.ini  requirements.txt  vercel.json  vercel_migrate.sh
api/app/: constants.py  exceptions.py  models.py  schema.py  settings.py  urls.py  vercel_wsgi.py
api/company/: company_data_fetcher.py  models.py
api/company/management/commands/: fetch_nip_details.py
api/company/migrations/: 0001_initial.py
api/services/: notification_service.py
api/tests/: conftest.py  settings_test.py  test_user.py
api/user/: data_models.py  managers.py  models.py  schema.py  services.py  strawberry_types.py  utils.py
api/user/management/commands/: createadmin.py  fetch_nip_details.py
api/user/migrations/: 0001_initial.py  0002_refreshtoken.py  0003_accesstoken_delete_refreshtoken.py  0004_alter_accesstoken_user.py  0005_userprofile.py
dockers/api/: Dockerfile-nginx.aws  Dockerfile.aws  Dockerfile.dev  nginx.aws.conf
dockers/ui/: Dockerfile.dev
playbooks/: README.md  aws-hosts-prod.ini  aws-hosts-stag.ini  aws-hosts.ini  deploy.prod.yml  deploy.yml  ec2_ssh_key.pem  ls.yml  mm.yml  prod-secret.yml  prod-vault.yml  qqq.yml  vault-stag.yml  vp.pass  xxx.yml
scripts/: Makefile  build.aws.sh  entrypoint.sh  reload-certs.sh
ui/: README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
ui/src/: App.tsx  GlobalStyles.ts  authHandlers.ts  constants.ts  main.tsx
ui/src/components/: HeadlessLink.tsx  Layout.tsx  PrivateRoute.tsx  SideMenu.tsx  listItems.tsx
ui/src/dev/: README.md
ui/src/pages/Dashboard/: Dashboard.tsx
ui/src/pages/Invoice/: Invoice.tsx
ui/src/pages/SignIn/: SignIn.tsx  queries.ts
ui/src/pages/SignUp/: SignUp.tsx
ui/src/pages/Welcome/: Welcome.tsx
