[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["SuperMati"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.6"
psycopg2-binary = "^2.9.9"
strawberry-graphql = "^0.211.1"
pyjwt = "^2.8.0"
mailjet-rest = "^1.3.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.10.1"
strawberry-graphql = {extras = ["debug-server"], version = "^0.211.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
